<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Taxi</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_settings">Settings</string>
    <string name="action_style">Theme</string>
    <string name="internet_request_title">Internet permission request</string>
    <string name="internet_request_text">This application won\'t work properly without internet.
    Please turn it on and try again</string>
    <string name="title_activity_login_settings">LoginSettings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="format_version">Version: <xliff:g>%1$s</xliff:g></string>
    <string name="format_call_sign">Call-sign: <xliff:g>%1$s</xliff:g></string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_header_privacy">Privacy settings</string>
    <string name="pref_header_app">App settings</string>
    <string name="pref_header_login">Profile settings</string>
    <string name="pref_header_network">Network settings</string>
    <string name="pref_header_fonts">Fonts</string>
    <string name="pref_login_label">Call sign</string>
    <string name="pref_login_key" translatable="false">login</string>
    <string name="pref_login_default" translatable="false">713</string>
    <string name="pref_password_label">Password</string>
    <string name="pref_password_key" translatable="false">password</string>
    <string name="pref_password_default" translatable="false">713</string>
    <string name="pref_server_label">Server address</string>
    <string name="pref_server_key" translatable="false">server</string>
    <string name="pref_server_default" translatable="false">gw.staxi.com.ua</string>
    <string name="pref_port_label">Port</string>
    <string name="pref_port_key" translatable="false">port</string>
    <string name="pref_port_default" translatable="false">16999</string>
    <string name="pref_theme_label">Theme</string>
    <string name="pref_theme_key" translatable="false">theme</string>
    <string name="pref_theme_default" translatable="false">@string/pref_theme_night</string>
    <string name="pref_theme_label_day">Day</string>
    <string name="pref_theme_label_night">Night</string>
    <string name="pref_theme_day" translatable="false">Day</string>
    <string name="pref_theme_night" translatable="false">Night</string>
    <string name="pref_air_label">Air</string>
    <string name="pref_air_key" translatable="false">air</string>
    <string name="pref_sound_label">Sound</string>
    <string name="pref_sound_key" translatable="false">sound</string>
    <string name="pref_vibration_label">Vibration</string>
    <string name="pref_vibration_key" translatable="false">vibration</string>
    <string name="pref_style_label">Style</string>
    <string name="pref_style_key" translatable="false">style</string>
    <string name="pref_waiting_time_label">Default waiting time</string>
    <string name="pref_waiting_time_key" translatable="false">waiting_time</string>
    <string name="pref_waiting_time_default" translatable="false">5</string>
    <string-array name="pref_waiting_time_titles">
        <item>3 minutes</item>
        <item>5 minutes</item>
        <item>7 minutes</item>
        <item>10 minutes</item>
        <item>12 minutes</item>
    </string-array>
    <string-array name="pref_waiting_time_values" translatable="false">
        <item>3</item>
        <item>5</item>
        <item>7</item>
        <item>10</item>
        <item>12</item>
    </string-array>
    <string name="actions_key" translatable="false">waiting_time</string>
    <string-array name="actions_titles">
        <item>On the spot</item>
        <item>No passengers</item>
        <item>Close the order</item>
    </string-array>
    <string-array name="actions_values" translatable="false">
        <item>5</item>
        <item>0</item>
        <item>8</item>
    </string-array>
    <string name="pref_languages_label">Languages</string>
    <string name="pref_languages_key" translatable="false">languages</string>
    <string-array name="pref_languages_titles" translatable="false">
        <item>Русский</item>
        <item>Українська</item>
        <item>English</item>
    </string-array>
    <string-array name="pref_languages_values" translatable="false">
        <item>ru</item>
        <item>uk</item>
        <item>en</item>
    </string-array>
    <string name="pref_clear_cache_label">Clear cache</string>
    <string name="pref_updates_label">Updates</string>
    <string name="pref_updates_key" translatable="false">updates</string>
    <string name="pref_gps_label">GPS Tracking</string>
    <string name="pref_gps_key" translatable="false">tracking</string>
    <string name="pref_order_of_orders_label">Order of orders</string>
    <string name="pref_order_of_orders_key" translatable="false">orders</string>
    <string name="pref_order_of_orders_default" translatable="false">-1</string>
    <string-array name="pref_order_of_orders_titles">
        <item>Chronologically</item>
        <item>Your at the top</item>
    </string-array>
    <string-array name="pref_order_of_orders_values" translatable="false">
        <item>-1</item>
        <item>1</item>
    </string-array>
    <string name="pref_show_pre_label">Pre-orders</string>
    <string name="pref_show_pre_key" translatable="false">pre-orders</string>
    <string name="pref_show_pre_summary">Show orders and pre-orders together</string>
    <string name="pref_del_orders_msg_label">Orders + messages</string>
    <string name="pref_del_orders_msg_key" translatable="false">orders+messages</string>
    <string name="pref_del_orders_label">Orders</string>
    <string name="pref_del_orders_key" translatable="false">orders</string>
    <string name="pref_del_msg_label">Messages</string>
    <string name="pref_del_msg_key" translatable="false">messages</string>
    <string name="pref_sector_label">Set sector</string>
    <string name="pref_sector_key" translatable="false">sector</string>
    <string name="pref_filter_label">Filter</string>
    <string name="pref_filter_key" translatable="false">filter</string>
    <string name="pref_ex_filter_label">Extended filter</string>
    <string name="pref_ex_filter_key" translatable="false">ex_filter</string>
    <string name="pref_balance_key" translatable="false">balance</string>
    <string name="pref_rating_label">Rating: </string>
    <string name="pref_rating_key" translatable="false">rating</string>
    <string name="format_new_status">Status: <xliff:g>%1$s</xliff:g></string>
    <string name="pref_status_label">Status: </string>
    <string name="pref_status_key" translatable="false">driverStatus</string>
    <string name="pref_text_size_label">Text size</string>
    <string name="pref_text_size_key" translatable="false">text_size</string>
    <string name="pref_btn_text_size_label">Button text size</string>
    <string name="pref_btn_text_size_key" translatable="false">btn_text_size</string>
    <string name="pref_tab_text_size_label">Tab text size</string>
    <string name="pref_tab_text_size_key" translatable="false">tab_text_size</string>
    <string name="pref_bold_text_label">Bold text</string>
    <string name="pref_bold_text_key" translatable="false">bold_text</string>
    <string name="pref_rotation_label">Allow screen rotation</string>
    <string name="pref_rotation_key" translatable="false">rotation</string>
    <string name="pref_update_remind_label">Do not remind</string>
    <string name="pref_update_remind_key" translatable="false">update_remind</string>
    <string name="pref_update_label">Update</string>
    <string name="pref_update_key" translatable="false">update</string>
    <string name="pref_rollback_label">Rollback</string>
    <string name="pref_rollback_key" translatable="false">rollback</string>
    <string name="pref_cat_orders">Order of orders</string>
    <string name="title_activity_order">OrderActivity</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="login_failed">Invalid credentials, please try again</string>
    <string name="nav_drawer_close">Close</string>
    <string name="nav_drawer_open">Open</string>
    <string name="nav_drawer_alert">Alert</string>
    <string name="alert_message">If you are being attacked press ALERT!!!</string>
    <string name="alert_fire">ALERT!!!</string>
    <string name="alert_cancel">Cancel</string>
    <string name="nav_drawer_exit">Exit</string>
    <string name="nav_drawer_settings" translatable="false">@string/action_settings</string>
    <string name="nav_drawer_extra_functions">Extra functions</string>
    <string name="nav_drawer_gps_map">GPS map</string>
    <string name="nav_drawer_tax_o_meter">Tax-o-meter</string>
    <string name="nav_drawer_messages">Messages</string>
    <string name="nav_drawer_my_orders">My orders</string>
    <string name="nav_drawer_main">Main</string>
    <string name="detail_cancel">Сancel</string>
    <string name="detail_waiting_time">Waiting time</string>
    <string name="main_orders_map">Map</string>
    <string name="main_order_actions">Actions</string>
    <string name="format_balance">Balance: <xliff:g messageId="condition">%1$s</xliff:g></string>
    <string name="format_price" translatable="false"><xliff:g messageId="condition">%1$s</xliff:g> \u20B4</string>
    <string name="main_main">Main</string>
    <string name="main_air">Air</string>
    <string name="main_order">Order</string>
    <string name="login_error_success">Login successful</string>
    <string name="login_error_incorrect">Incorrect login or password</string>
    <string name="login_error_blocked">Driver is blocked</string>
    <string name="login_error_occupied">Can\u0027t login. Driver\u0027s already online</string>
    <string name="login_error_radio">Driver is working on radio. Please, contact administration</string>
    <string name="login_error_taken">Incorrect login or password, or call-sign is taken</string>
    <string name="order_error_not_complete">You haven\'t confirmed order completion</string>
    <string name="order_error_taken">Order taken by other driver</string>
    <string name="order_error_not_found">Order not found</string>
    <string name="format_order_from">From: <xliff:g>%1$s</xliff:g></string>
    <string name="format_order_to">To: <xliff:g>%1$s</xliff:g></string>
    <string name="format_order_price">Price: <xliff:g>%1$s</xliff:g> \u20B4</string>
    <string name="format_order_phone">Telephone: <xliff:g>%1$s</xliff:g></string>
    <string name="format_order_description">Description: <xliff:g>%1$s</xliff:g></string>
    <string name="format_order_options">Options: <xliff:g>%1$s</xliff:g></string>
    <string name="format_order_sector">Sector: <xliff:g>%1$s</xliff:g></string>
    <string name="format_order_distance">Distance: <xliff:g>%1$s</xliff:g> m</string>
    <string name="format_order_time_created">Time created: <xliff:g>%1$s</xliff:g></string>
    <string name="format_order_date">Date: <xliff:g>%1$s</xliff:g></string>
    <string name="format_order_time">Time: <xliff:g>%1$s</xliff:g></string>
    <string name="format_order_tariff">Tariff: <xliff:g>%1$s</xliff:g></string>
    <string name="format_take_order">Take (<xliff:g>%1$s</xliff:g>)</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="title_activity_check_navigation" translatable="false">CheckNavigation</string>
    <string name="exit_toast">To exit the application press \'Back\' one more time</string>
    <string name="internet_gone">No internet connection</string>
    <string name="internet_came_back">Connection established</string>
    <string name="internet_online">Go online</string>
</resources>