<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_header_login">

        <EditTextPreference
            android:title="@string/pref_login_label"
            android:key="@string/pref_login_key"
            android:defaultValue="@string/pref_login_default"/>

        <EditTextPreference
            android:key="@string/pref_password_key"
            android:title="@string/pref_password_label"
            android:defaultValue="@string/pref_password_default"
            android:inputType="textPassword"
            android:gravity="center"
            android:ellipsize="start" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_header_network">

        <EditTextPreference
            android:key="@string/pref_server_key"
            android:title="@string/pref_server_label"
            android:defaultValue="ws://gw.staxi.com.ua:16999/test">
        </EditTextPreference>
    </PreferenceCategory>
</PreferenceScreen>