<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="Air">

    <PreferenceCategory
        android:title="@string/pref_cat_orders">

        <ListPreference
            android:defaultValue="@string/pref_order_of_orders_default"
            android:entries="@array/pref_order_of_orders_titles"
            android:entryValues="@array/pref_order_of_orders_values"
            android:key="@string/pref_order_of_orders_key"
            android:title="@string/pref_order_of_orders_label" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:singleLine="false"
            android:summary="@string/pref_show_pre_summary"
            android:key="@string/pref_show_pre_key"
            android:widgetLayout="@layout/switch_compat"
            android:title="@string/pref_show_pre_label" />
    </PreferenceCategory>
</PreferenceScreen>