<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_sidebar_home"
            android:title="@string/nav_drawer_main" />

        <item
            android:id="@+id/nav_my_orders"
            android:icon="@drawable/ic_sidebar_orders"
            android:title="@string/nav_drawer_my_orders" />

        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_sidebar_massages"
            android:title="@string/nav_drawer_messages" />

        <item
            android:enabled="false"
            android:id="@+id/nav_gps_map"
            android:icon="@drawable/ic_sidebar_map"
            android:title="@string/nav_drawer_gps_map" />

        <item
            android:enabled="false"
            android:id="@+id/nav_meter"
            android:icon="@drawable/ic_sidebar_taximeter"
            android:title="@string/nav_drawer_tax_o_meter" />

        <item
            android:enabled="false"
            android:id="@+id/nav_add_functions"
            android:icon="@drawable/ic_sidebar_extras"
            android:title="@string/nav_drawer_extra_functions" />

        <item
            android:id="@+id/nav_alarm"
            android:icon="@drawable/ic_sidebar_baykal"
            android:title="@string/nav_drawer_alert" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_sidebar_settings"
            android:title="@string/nav_drawer_settings" />

        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_sidebar_exit"
            android:title="@string/nav_drawer_exit" />
    </group>
</menu>
