<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="Login settings"
        android:key="pref_key_storage_settings">

        <EditTextPreference
            android:key="notifications"
            android:summary="712"
            android:title="Call sign">
        </EditTextPreference>

        <EditTextPreference
            android:key="address"
            android:inputType="textPassword"
            android:title="Password">
        </EditTextPreference>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="Network Settings"
        android:key="pref_key_storage_settings">

        <EditTextPreference
            android:key="@string/pref_port_key"
            android:inputType="number"
            android:summary="@string/pref_port_default"
            android:title="@string/pref_port_label">
        </EditTextPreference>

        <ListPreference
            android:key="@string/pref_server_key"
            android:summary="@string/pref_server_default"
            android:title="@string/pref_server_label"
            android:entries="@array/pref_server_titles"
            android:entryValues="@array/pref_server_values">
        </ListPreference>

        <EditTextPreference
            android:key="address"
            android:inputType="number"
            android:summary="7777"
            android:title="Get from server">
        </EditTextPreference>
    </PreferenceCategory>
</PreferenceScreen>
